# Data-Guide

./: .gitignore  AGENTS.md  Data Guide Project Description.md  README.md  ast_deps.csv  data_profiler.py  data_transform.py  etl-data_from_pdf.py  pipeline.py  profiler.py  profiler_update.py  pyproject.toml  requirements.txt  run_profiler.py  test_profiler.py
data_pipeline/: AR_and_Collections.ipynb  Retention.ipynb  Retention_and_Attrition_Analysis.ipynb  api_client.py  bivariate_profiler.py  cookie-backup.json  data munging.ipynb  data_pull.py  debug_output.txt  debug_output1.txt  main.py  pipeline.py  pipeline_transformed.py  profiler.py  test_html.html
data_pipeline/pull_dec_29/profiles/: aged_AR raw data  aged_AR raw data.md  statement_submission raw data  statement_submission raw data.md
docs/: ARCHITECTURE_OVERVIEW.md
purpose_files/: run_profiler.purpose.md
src/: data_profiler.purpose.md  data_profiler.py  main_pipeline.py  pipeline.purpose.md  pipeline.py  run_profiler.py  test_profiler.py
src/data_pipeline/: __init__.purpose.md  bivariate_profiler.py  config.purpose.md  config.py  data_pull.py  data_transform.purpose.md  inline_html.py  md_to_html.py  pipeline.py  pipeline_transformed.purpose.md  pipeline_transformed.py  profiler.purpose.md  profiler.py
src/notebooks/: AR_and_Collections.ipynb  Insurance_Plan_Profitability.ipynb  Retention.ipynb  Retention_and_Attrition_Analysis.ipynb  Scheduling_Optimization.ipynb  Tighted_AR_and_Collections.ipynb  data munging.ipynb
templates/: data_guide_template.md
(+6 files in other folders)
