[project]
name = "data_guide"
version = "0.0.1"
description = "Accelerated and Augmented EDA"
authors = [{ name = "Zach" }]
dependencies = [
  "pandas",
  "numpy",
  "scipy",
  "matplotlib",
  "seaborn",
  "missingno",
  "phonenumbers",
  "statsmodels",
  "scikit-learn",
  "geopandas",
  "esda",
  "requests",
  "beautifulsoup4",
  "python-magic",
  "markdown",
  "pdfplumber",
  "typer",
  "pyyaml"
]

[project.scripts]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
